syntax = "proto3";

package basiccalculator;

option go_package = "GRPC/proto";



message CalculationRequest{
    int64 Number1 = 1;
    int64 Number2 = 2;
}

message CalculatedResponse{
    int64 Result = 1;
}


service BasicCalculator{
    rpc Addition(CalculationRequest) returns (CalculatedResponse);
    rpc Substraction(CalculationRequest) returns (CalculatedResponse);
    rpc Multiplication(CalculationRequest) returns (CalculatedResponse);
    rpc Division(CalculationRequest) returns (CalculatedResponse);
}